#2241 - Fix FWDiscover Grab it button break into 2 lines

--- a/src/main/webapp/resources/css/styles-fwdiscover.css
+++ b/src/main/webapp/resources/css/styles-fwdiscover.css
@@ -1544,7 +1544,7 @@
         font-size: 18px;
     }
     .fwdiscover-modal .details-button-holder .details-btn{
-        font-size: 36px;
+        font-size: 32px;
     }
     .fwdiscover-modal .modal-content p{
         font-size: 30px;
